[package]
name = "server"
version = "0.1.0"
authors = ["wuhao2016 <whaohit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"



[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
async-rdma = "0.1"