[package]
name = "server"
version = "0.1.0"
authors = ["wuhao2016 <whaohit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"


[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
async-rdma = {path = "../async_rdma"}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.9"